# skirk

./: Cargo.toml  Makefile  READMe.md  build.rs
include/: skirk.h
src/: skirk.c
